tests/fixtures/invalid/min_none_set.py
# Cannot call min() with None, Set[int]
x = min(None, {1, 2, 3})
